# ingestion-service

./: .gitignore  03_wal-review.md  Cargo.toml  Dockerfile  LICENSE-MIT  readme.md  refactor.md  wal-fixes-plan.md  wal-impl-plan.md
.github/workflows/: cd.yaml  ci-cd.yaml  ci.yaml  security-audit.yaml
docs/: README.md  SUMMARY.md  architecture.md  configuration.md  development.md  http-and-metrics.md  messages-and-routing.md  operations.md  releasing.md  tutorial.md  wal-and-reliability.md
schema/: base.schema.json  sensor.business.schema.json  sensor.schema.json  status.business.schema.json  status.schema.json
src/: config.rs  dlq.rs  lib.rs  main.rs
src/cache/: http.rs  mod.rs  state.rs
src/db/: influx.rs  mod.rs  point.rs
src/infrastructure/: mod.rs  prometheus.rs  router.rs  schema.rs
src/infrastructure/cache/: http.rs  state.rs
src/infrastructure/database/: influx.rs  mod.rs  point.rs
src/infrastructure/sink/: influx.rs  mod.rs  point.rs
src/infrastructure/source/: mod.rs  mqtt.rs
src/infrastructure/wal/: codec.rs  cursor.rs  forwarder.rs  mod.rs  recover.rs  segment.rs  subscription.rs  test_support.rs  types.rs  wal.rs  writer.rs
src/model/: mod.rs  sensor_msg.rs  status_msg.rs  topic.rs
src/model/messages/: message.rs  mod.rs  sensor.rs  status.rs
src/observation/: prometheus.rs
src/pipeline/: context.rs  mod.rs  runner.rs  stage.rs
src/pipeline/stages/: cache_update.rs  decode.rs  (+8 more)
src/validate/: message.rs  mod.rs  router.rs  schema.rs  topic.rs
tests/: batcher.rs  http_cache.rs  pipeline_end_to_end.rs
tests/common/: mod.rs
