[package]
name = "smarthome-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bytes = "1"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["clock"] }
jsonschema = "0.44.1"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
reqwest = "0.13.2"
rumqttc = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time", "net", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
secrecy = { version = "0.8", features = ["alloc"] }
urlencoding = "2"
bincode = "1.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
